<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFLTeams</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="instructions">Select Query to view Teams</string>
    <string name="query">Query</string>
    <string name="blank"></string>
    <string name="city">City</string>
    <string name="team">Team</string>
    <string name="abbr">Abbr</string>
    <string name="division">Division</string>
    <string name="conference">Conference</string>
    <string name="division_short">Div</string>
    <string name="conference_short">Conf</string>

</resources>
