<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listHeader"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <TextView android:id="@+id/teamTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/team"
       style="@style/columnsLong"/>
    
    <TextView android:id="@+id/cityTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/city"
       style="@style/columnsLong"/>
    
    <TextView android:id="@+id/abbrTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/abbr"
       style="@style/columnsSmall"/>
    
    <TextView android:id="@+id/conferenceTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/conference"
       style="@style/columnsSmall"/>
    
    <TextView android:id="@+id/divisionTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       style="@style/columnsSmall"/>
    
    </LinearLayout>